--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -151,6 +151,15 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
   margin-bottom: 20px;
   width: 50%;
   border-radius: 50%;
+  max-width: 150px;
+}
+
+.social {
+  display: inline;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30px;
+  padding-left: 5px;
 }
 
 /* Larger than phablet */
