--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -51,7 +51,8 @@
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 75%; }
+    width: 75%;
+    max-width: 700px; }
   .column,
   .columns {
     margin-left: 4%; }
