--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -128,7 +128,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #344E41;
 }
 hr.footer-line {
